# poormans-weather-station

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: db_average_hourly.ipynb
src/arduino/: pmws.ino
src/dashboard/: main.py
src/server/: database.py  list_ports.py  server.py
tests/: test_database.py
