[project]
name = "poormans-weather-station"
version = "2023.0.1"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

